Add enhanced logging and input validation across services
Improved logging across gRPC client and services to better track execution flow and errors. Added input validation for sorting algorithms and auto-run configurations to ensure robust handling of edge cases. Refactored AutoTestRunner for structured automated test management and detailed result reporting.